# llm_hands_on

./: problem1.ipynb  problem2.ipynb  problem3.ipynb  problem4.ipynb  run_jupyter.bat
RAG/: 260305 AIAS 26년 3차 RAG API Key_공유.xlsx
RAG/1일차/실습 자료/Code/: 1. Llama_index.ipynb  2. RAG.ipynb
base/: .gitignore  Chapter_3_Excercise_Attention.ipynb  README.md
base/llm_from_scratch/llm 효율화/03_kv-cache/: gpt_with_kv_cache.py
llm/: llm_hands_on.code-workspace
on-device/실습/: 1. Pruning for CNN_answer.ipynb  2. Quantization for CNN_answer.ipynb
test/: AI인증시험_코딩테스트.ipynb  AI인증시험_코딩테스트2.ipynb  AI인증시험_코딩테스트2_정답.ipynb  pyproject.toml
test/data/: ai_summary.txt
timeseries/: pyproject.toml
timeseries/3_4-ts-practice/: ts_practice.ipynb
timeseries/7_8-recsys-practice/: RecSys_GCF_practice.ipynb  RecSys_GCF_sol.ipynb
vision/: 01_ResNet18_CIFAR10.ipynb  02_ViT_CIFAR10.ipynb
실습1/실습/: 3. Knowledge Distillation_answer.ipynb  4. Pruning for LLM_answer.ipynb  5. Quantization for LLM.ipynb  5. Quantization for LLM_answer.ipynb
