[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-index>=0.14.15",
    "llama-index-embeddings-google-genai>=0.3.2",
    "llama-index-llms-google-genai>=0.8.7",
    "nest-asyncio>=1.6.0",
    "pip-system-certs>=5.3",
    "torch>=2.10.0",
]
